updating env.example

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,10 @@
 # Generate a PAT at https://linear.app/settings/api
 LINEAR_ACCESS_TOKEN=your_personal_access_token
 
+# for integration testing purpose
+# TEAMID=
+# PROJECTID=
+
 # OAuth Authentication (Optional)
 # Only needed if using OAuth flow instead of PAT
 # LINEAR_CLIENT_ID=your_oauth_client_id
